--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -16,21 +16,29 @@
 	},
 	"d1_databases": [
 		{
-		"binding": "DB",
-		"database_name": "workers-api",
-		"database_id": "7473a062-eb13-4dc8-bcc3-6960fc2fe576",
+			"binding": "DB",
+			"database_name": "workers-api",
+			"database_id": "7473a062-eb13-4dc8-bcc3-6960fc2fe576",
 		}
-  	],
-	"vars": { 
+	],
+	"vars": {
 		"open_register": 0,
-		"jwt_secret": "workers-api" 
+		"jwt_secret": "workers-api"
 	},
 	"durable_objects": {
-    "bindings": [
-      {
-        "class_name": "Counter",
-        "name": "COUNTER",
-      },
-    ],
-  },
+		"bindings": [
+			{
+				"class_name": "Counter",
+				"name": "COUNTER",
+			},
+		],
+	},
+	"migrations": [
+		{
+			"tag": "v1",
+			"new_sqlite_classes": [
+				"Counter"
+			]
+		}
+	]
 }
