--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,7 +6,7 @@
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "workers-api",
 	"main": "src/index.ts",
-	"compatibility_date": "2025-09-20",
+	"compatibility_date": "2025-09-17",
 	"assets": {
 		"binding": "ASSETS",
 		"directory": "./public"
@@ -18,7 +18,7 @@
 		{
 			"binding": "DB",
 			"database_name": "workers-api",
-			"database_id": "7473a062-eb13-4dc8-bcc3-6960fc2fe576",
+			"database_id": "7473a062-eb13-4dc8-bcc3-6960fc2fe576"
 		}
 	],
 	"vars": {
@@ -29,9 +29,9 @@
 		"bindings": [
 			{
 				"class_name": "Counter",
-				"name": "COUNTER",
-			},
-		],
+				"name": "COUNTER"
+			}
+		]
 	},
 	"migrations": [
 		{
