--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -30,6 +30,10 @@
 			{
 				"class_name": "Counter",
 				"name": "COUNTER"
+			},
+			{
+				"class_name": "ChatRoom",
+				"name": "CHAT"
 			}
 		]
 	},
@@ -38,6 +42,12 @@
 			"tag": "v1",
 			"new_sqlite_classes": [
 				"Counter"
+			]
+		},
+		{
+			"tag": "v2",
+			"new_sqlite_classes": [
+				"ChatRoom"
 			]
 		}
 	]
